WP-3608: fix pdf and link alignment.

--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -438,62 +438,6 @@ form .field-multiple-table th.field-label {
 .page-node-add-faculty input[value="Remove affiliation"] {
   display: block;
 }
-.page-node-edit.node-type-faculty .field-name-field-place-of-publication,
-.page-node-edit.node-type-faculty .field-name-field-publisher,
-.page-node-edit.node-type-faculty .field-name-field-volume-number,
-.page-node-edit.node-type-faculty .field-name-field-issue-number,
-.page-node-edit.node-type-faculty .field-name-field-page-count,
-.page-node-edit.node-type-faculty .group-pub-link-pdf .fieldset-wrapper > div,
-.page-node-add-faculty .field-name-field-place-of-publication,
-.page-node-add-faculty .field-name-field-publisher,
-.page-node-add-faculty .field-name-field-volume-number,
-.page-node-add-faculty .field-name-field-issue-number,
-.page-node-add-faculty .field-name-field-page-count,
-.page-node-add-faculty .group-pub-link-pdf .fieldset-wrapper > div {
-  display: inline-block;
-  margin-right: 12px;
-  vertical-align: top;
-}
-.page-node-edit.node-type-faculty .field-name-field-place-of-publication .description,
-.page-node-add-faculty .field-name-field-place-of-publication .description {
-  max-width: 327px;
-}
-.page-node-edit.node-type-faculty .group-pub-link-pdf .form-submit,
-.page-node-add-faculty .group-pub-link-pdf .form-submit {
-  height: 24px !important;
-  line-height: 26px !important;
-  margin-bottom: 0 !important;
-  margin-left: 5px;
-  vertical-align: top;
-}
-.page-node-edit.node-type-faculty .field-name-field-place-of-publication,
-.page-node-edit.node-type-faculty .field-name-field-publisher,
-.page-node-edit.node-type-faculty .field-name-field-volume-number,
-.page-node-edit.node-type-faculty .field-name-field-issue-number,
-.page-node-edit.node-type-faculty .field-name-field-page-count,
-.page-node-edit.node-type-faculty .group-pub-link-pdf .fieldset-wrapper > div,
-.page-node-add-faculty .field-name-field-place-of-publication,
-.page-node-add-faculty .field-name-field-publisher,
-.page-node-add-faculty .field-name-field-volume-number,
-.page-node-add-faculty .field-name-field-issue-number,
-.page-node-add-faculty .field-name-field-page-count,
-.page-node-add-faculty .group-pub-link-pdf .fieldset-wrapper > div {
-  display: inline-block;
-  margin-right: 12px;
-  vertical-align: top;
-}
-.page-node-edit.node-type-faculty .field-name-field-place-of-publication .description,
-.page-node-add-faculty .field-name-field-place-of-publication .description {
-  max-width: 327px;
-}
-.page-node-edit.node-type-faculty .group-pub-link-pdf .form-submit,
-.page-node-add-faculty .group-pub-link-pdf .form-submit {
-  height: 24px !important;
-  line-height: 26px !important;
-  margin-bottom: 0 !important;
-  margin-left: 5px;
-  vertical-align: top;
-}
 .page-node-edit.node-type-faculty .node-media_item-form .form-item-title,
 .page-node-add-faculty .node-media_item-form .form-item-title {
   margin-bottom: 1em;
@@ -605,4 +549,31 @@ input[value="Save & Publish"]:hover,
 
 .page-node-edit.node-type-book input[value="Upload"], .page-node-edit.node-type-case input[value="Upload"], .page-node-edit.node-type-faculty input[value="Upload"], .page-node-edit.node-type-publication input[value="Upload"], .page-node-edit.node-type-working-paper input[value="Upload"] {
   display: none;
+}
+
+.field-name-field-place-of-publication,
+.field-name-field-publisher,
+.field-name-field-volume-number,
+.field-name-field-issue-number,
+.field-name-field-page-count,
+.group-pub-link-pdf .fieldset-wrapper > div {
+  display: inline-block;
+  margin-right: 12px;
+  vertical-align: top;
+}
+
+.field-name-field-place-of-publication .description {
+  max-width: 327px;
+}
+
+.group-pub-link-pdf .form-submit {
+  height: 24px !important;
+  line-height: 26px !important;
+  margin-bottom: 0 !important;
+  margin-left: 5px;
+  vertical-align: top;
+}
+
+#node_publication_form_group_pub_link_pdf .fieldset-description {
+  display: block;
 }
